# pegasus

./: .gitignore  pyproject.toml
examples/: pure_train_hf_text_classification.py
pegasusai/: commons.py  utils.py
pegasusai/datasets/: __init__.py  dataset.py  dataset_dict.py
pegasusai/evaluate/: text_classification.py
pegasusai/transformers/: __init__.py  loading.py  model.py  trainer.py
pegasusai/transformers/models/: bert.py
